# Chat-Privacy

./: README.md  package-lock.json  package.json
backend/: .gitignore  Cargo.toml
backend/src/: connection_manager.rs  handlers.rs  main.rs  models.rs  signaling.rs  websocket.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ChatInterface.tsx  LandingPage.tsx  Toast.tsx  UsernameSetup.tsx
src/lib/: api.ts  encryption.ts  storage.ts  webrtc.ts  websocket.ts
